--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "broccoli-funnel": "^2.0.1",
     "broccoli-merge-trees": "^2.0.0",
     "broccoli-stew": "^1.5.0",
+    "http-server": "^0.11.1",
     "pdfjs-dist": "^2.0.334"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "npm run clean && npm run build",
+    "start": "npm run build:clean && http-server dist",
+    "build:clean": "npm run clean && npm run build",
     "build": "broccoli build dist",
     "clean": "rm -fr ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
